better schema for monitors
